--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "homepage": "https://github.com/Patch-o/uh-ejercicioNODE#readme",
   "dependencies": {
+    "cloudinary": "^1.30.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.5.1"
+    "mongoose": "^6.5.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
